@@ -20,11 +20,14 @@ void ReadInputFilterAndOutput(RGBinary *rg,
 		int endContig,
 		int endPos,
 		int algorithmReads,
+		int uniquenessScore,
+		int minUniquenessScore,
 		int minScoreReads,
 		int maxMismatches,
 		int maxColorErrors,
 		int minDistancePaired,
 		int maxDistancePaired,
+		int useDistancePaired,
 		int contigAbPaired,
 		int inversionsPaired,
 		int unpaired,
@@ -172,6 +175,8 @@ void ReadInputFilterAndOutput(RGBinary *rg,
 		/* Filter */
 		foundType=FilterAlignEntries(&a,
 				algorithmReads,
+				uniquenessScore,
+				minUniquenessScore,
 				minScoreReads,
 				startContig,        
 				startPos,
@@ -182,6 +187,9 @@ void ReadInputFilterAndOutput(RGBinary *rg,
 				pairedEnd,        
 				minDistancePaired,          
 				maxDistancePaired,
+				useDistancePaired,
+				contigAbPaired,
+				inversionsPaired,
 				unpaired);
 
 		/* Print the apporiate files based on the return type */
