@@ -12,11 +12,14 @@ void ReadInputFilterAndOutput(RGBinary *rg,
 		int endChr,
 		int endPos,
 		int algorithmReads,
+		int uniquenessScore,
+		int minUniquenessScore,
 		int minScoreReads,
 		int maxMismatches,
 		int maxColorErrors,
 		int minDistancePaired,
 		int maxDistancePaired,
+		int useDistancePaired,
 		int contigAbPaired,
 		int inversionsPaired,
 		int unpaired,
