@@ -21,6 +21,8 @@ bpostprocess
 	[\fB\-i\fR \fIFILENAME\fR] 	[\fB\-\-alignFileName=\fIFILENAME\fR]
 	[\fB\-2\fR]			[\fB\-\-pairedEnd\fR]
 	[\fB\-a\fR \fIINTEGER\fR]	[\fB\-\-algorithmReads=\fIINTEGER\fR]
+	[\fB\-u\fR]			[\fB\-\-uniquenessScore\fR]
+	[\fB\-z\fR \fIINTEGER\fR] 	[\fB\-\-minUniquenessScore=\fIINTEGER\fR]
 	[\fB\-s\fR \fIINTEGER\fR] 	[\fB\-\-startContig=\fIINTEGER\fR]
 	[\fB\-S\fR \fIINTEGER\fR] 	[\fB\-\-startPos=\fIINTEGER\fR]
 	[\fB\-e\fR \fIINTEGER\fR] 	[\fB\-\-endContig=\fIINTEGER\fR]
